ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/app-protocols: '{"my-port":"HTTPS"}'
    beta.cloud.google.com/backend-config: '{"ports": {"my-port":"backendconfig"}}'
  name: nginx
  labels:
    svc: nginx
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: "my-port"
  selector:
    app: nginx
